--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1>Jose Carlos Salvador Mamani</h1>
+        <h1>Jose Carlos Salvador</h1>
         <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
